# AtxLogger

./: .gitignore  CMakeLists.txt  README.md  portfile.cmake  vcpkg.json
AtxLoggerTest/: AtxLoggerTest.cpp  CMakeLists.txt
atx-logger/: portfile.cmake  vcpkg.json
cmake/: config.cmake.in
include/: AtxLogger.h  AtxLoggerConf.h
src/: AtxLogger.cpp  AtxLoggerConf.cpp
